--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,17 @@
 #################
 
 *.pydevproject
-.project
+# .project
 .metadata
-bin/
+# bin/
 tmp/
 *.tmp
 *.bak
 *.swp
 *~.nib
 local.properties
-.classpath
-.settings/
+# .classpath
+# .settings/
 .loadpath
 
 # External tool builders
@@ -192,7 +192,7 @@ $RECYCLE.BIN/
 # Packages
 *.egg
 *.egg-info
-dist/
+# dist/
 build/
 eggs/
 parts/
